# tap-wrike-sdk

./: README.md  meltano.yml  pyproject.toml  tox.ini
tap_wrike_sdk/: __init__.py  auth.py  client.py  streams.py  tap.py
tap_wrike_sdk/schemas/: Tasks.py  Timelogs.py
tests/: __init__.py  test_core.py
