[tool.poetry]
name = "Potloc-tap-wrike-sdk"
version = "0.0.1"
description = "`tap-wrike-sdk` is a Singer tap for wrike, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Stephane Burwash"]
keywords = [
    "ELT",
    "wrike",
]
license = "Apache 2.0"
packages = [
    { include = "tap_wrike_sdk" },
]

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
singer-sdk = { version="^0.31.0" }
fs-s3fs = { version = "^1.1.1", optional = true }
requests = "^2.28.2"
cached-property = "^1" # Remove after Python 3.7 support is dropped

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^5.0.4"
darglint = "^1.8.1"
black = "^23.1.0"
pyupgrade = "^3.3.1"
mypy = "^1.0.0"
isort = "^5.11.5"
singer-sdk = { version="^0.31.0", extras = ["testing"] }
types-requests = "^2.28.11.12"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_wrike_sdk"

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-wrike-sdk = 'tap_wrike_sdk.tap:Tapwrike.cli'
